name:          harakiri-llvm
version:       0.1.0.0
synopsis:      LLVM frontend for harakiri language
description:   LLVM frontend for harakiri language
homepage:      https://github.com/cyberfined/harakiri-llvm
bug-reports:   https://github.com/cyberfined/harakiri-llvm/issues
author:        cyberfined
maintainer:    cyberfined@protonmail.com
copyright:     Copyright (c) cyberfined
license:       OtherLicense
license-file:  LICENSE
category:      Compilers
build-type:    Simple
cabal-version: >= 1.12
extra-source-files:
    LICENSE
    README.md

source-repository head
  type:     git
  location: https://github.com/cyberfined/harakiri-llvm

library
  --exposed-modules:
  --other-modules:
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , harakiri-lib
  default-language: Haskell2010

executable harakiri
  main-is: Main.hs
  hs-source-dirs:
      main
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , harakiri-llvm
  default-language: Haskell2010
