cabal-version:       2.2
name:                harakiri-llvm
version:             0.1.0.0
synopsis:            LLVM frontend for harakiri language
description:         LLVM frontend for harakiri language
homepage:            https://github.com/cyberfined/harakiri-llvm
license:             WTFPL
license-file:        LICENSE
author:              cyberfined
maintainer:          cyberfined@protonmail.com
copyright:           Copyright (c) 2022 cyberfined
category:            Compilers
build-type:          Simple
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/cyberfined/harakiri-llvm

library
  exposed-modules:
      Harakiri.Compiler.LLVM
  hs-source-dirs:
      src
  ghc-options:
      -Wall
  default-extensions:
      OverloadedStrings
    , LambdaCase
  build-depends:
      base                 >= 4.7  && < 5
    , bytestring           >= 0.10 && < 1
    , containers           >= 0.5  && < 1
    , harakiri-lib         >= 0.1  && < 1
    , llvm-hs-pure         >= 12   && < 12.1
    , mtl                  >= 2.2  && < 3
    , text                 >= 1.2  && < 2
    , unordered-containers >= 0.2  && < 1

executable harakiri-llvm
  hs-source-dirs:
      main
  main-is:
      Main.hs
  other-modules:
      OptionsParser
  ghc-options:
      -Wall
  default-extensions:
      OverloadedStrings
    , LambdaCase
  build-depends:
      base                 >= 4.7  && < 5
    , bytestring           >= 0.10 && < 1
    , containers           >= 0.5  && < 1
    , filepath             >= 1.4  && < 2
    , harakiri-lib         >= 0.1  && < 1
    , harakiri-llvm        >= 0.1  && < 1
    , llvm-hs              >= 12   && < 12.1
    , llvm-hs-pure         >= 12   && < 12.1
    , mtl                  >= 2.2  && < 3
    , optparse-applicative >= 0.16 && < 1
    , text                 >= 1.2  && < 2
  default-language:
      Haskell2010
